--- a/index.html
+++ b/index.html
@@ -204,13 +204,16 @@
         border: 2px solid #ddd;
         border-radius: 8px;
         cursor: pointer;
+        transition: transform 0.2s ease, background-color 0.2s ease, border-color 0.2s ease;
       }
       .option:hover {
         background-color: #f5f5f5;
+        transform: translateY(-2px);
       }
       .option.selected {
         border-color: var(--primary-color);
         background-color: #e3f2fd;
+        transform: scale(1.02);
       }
       .option.correct {
         border-color: var(--success-color);
@@ -233,6 +236,16 @@
       .feedback.incorrect {
         background-color: #ffebee;
         color: var(--error-color);
+      }
+      .notification-banner {
+        background-color: #e8f5e9;
+        color: var(--success-color);
+        padding: 1rem;
+        border-radius: 8px;
+        margin-bottom: 1.5rem;
+        font-weight: 600;
+        border: 1px solid var(--success-color);
+        text-align: center;
       }
       .quiz-controls {
         margin-top: 1.5rem;
@@ -299,6 +312,12 @@
       .quiz-result h3 {
         color: var(--primary-color);
         font-size: 1.5rem;
+      }
+      .result-controls {
+        margin-top: 1.5rem;
+        display: flex;
+        justify-content: center;
+        gap: 1rem;
       }
       .suggestions-container {
         margin-top: 2rem;
@@ -576,9 +595,28 @@
       .session-progress {
         font-weight: 700;
         font-size: 1.1rem;
+        transition: transform 0.3s ease;
+      }
+      .score-pop-animation {
+        animation: score-pop 0.5s ease-in-out;
+      }
+      @keyframes score-pop {
+        0% { transform: scale(1); }
+        50% { transform: scale(1.3); color: var(--accent-color); }
+        100% { transform: scale(1); }
       }
 
-       .generating-overlay {
+      .question-wrapper {
+        transition: opacity 0.3s ease-in-out;
+      }
+      .question-wrapper.fade-out {
+        opacity: 0;
+      }
+      .question-wrapper.fade-in {
+        opacity: 1;
+      }
+
+      .generating-overlay {
         position: absolute;
         top: 0;
         left: 0;
@@ -664,6 +702,59 @@
       .stat-description {
         color: #666;
         font-size: 0.9rem;
+      }
+
+      /* Difficulty Selection */
+      .difficulty-selection {
+        text-align: center;
+        padding: 2rem 0;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        min-height: 250px;
+      }
+      .difficulty-selection h3 {
+        margin-bottom: 1.5rem;
+        color: var(--primary-color);
+        font-size: 1.3rem;
+      }
+      .difficulty-buttons {
+        display: flex;
+        justify-content: center;
+        gap: 1rem;
+        flex-wrap: wrap;
+      }
+      .btn-difficulty {
+        padding: 1rem 2rem;
+        font-size: 1.1rem;
+        border: 2px solid;
+        background-color: transparent;
+        transition: all 0.2s ease;
+      }
+      .btn-easy {
+        color: var(--success-color);
+        border-color: var(--success-color);
+      }
+      .btn-easy:hover {
+        background-color: #e8f5e9;
+        transform: translateY(-2px);
+      }
+      .btn-medium {
+        color: var(--secondary-color);
+        border-color: var(--secondary-color);
+      }
+      .btn-medium:hover {
+        background-color: #fff8e1;
+        transform: translateY(-2px);
+      }
+      .btn-hard {
+        color: var(--error-color);
+        border-color: var(--error-color);
+      }
+      .btn-hard:hover {
+        background-color: #ffebee;
+        transform: translateY(-2px);
       }
     </style>
   <script type="importmap">
